tests/baselines/reference/classStaticBlockUseBeforeDef2(target=esnext).errors.txt
classStaticBlockUseBeforeDef2.ts(3,14): error TS2729: Property 'x' is used before its initialization.


==== classStaticBlockUseBeforeDef2.ts (1 errors) ====
    class C {
        static {
            this.x = 1;
                 ~
!!! error TS2729: Property 'x' is used before its initialization.
!!! related TS2728 classStaticBlockUseBeforeDef2.ts:5:12: 'x' is declared here.
        }
        static x;
    }
    